app/assets/stylesheets/styles.css.scss
.homepage-nav {
	margin-bottom:0px;
}

.horizontal-align {
  display:flex;
  align-items:center;
}

.vertical-center {
  text-align:center;
}

.online-status-indicator {
	border-radius: 50%;
	width: 6px;
	height: 6px; 
	background: #4CAF50;
	margin-right: 5px;
}

#online-navbar  {
	margin-top:22px;
	margin-bottom:22px;
	margin-right:0px;
}

#offline-navbar {
	margin-top:22px;
	margin-bottom:22px;
	margin-right:0px;
	background: #9d9d9d;
}

.offline-status-indicator {
	border-radius: 50%;
	width: 6px;
	height: 6px; 
	background: rgba(0, 0, 0, 0.38);
	margin-right: 5px;
}

.homepage {
	height: 655px;
	background-image: url(/assets/sea1.jpg);
	background-size: 120%;
	background-position: left center;
	background-repeat: no-repeat;
	padding: 0;
	margin: 0;
}

.my-header {
	color: white;
	font-size: 55px;
	font-weight: 500;
	padding-top: 135px;
	padding-bottom: 40px;
}

.tagline {
	color: white;
	font-size: 22px;
	padding-bottom: 85px;
	font-weight: 400;
}

